# image-searcher

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  image-searcher
include/image-searcher/: color-histogram.hpp  image-searcher.hpp
src/: .#main.cpp  main.cpp
